# PPE-compliance-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
reports/: final_project_report.md
src/ppe_detector/: __init__.py  bayes.py  cli.py  dataset.py  reporting.py  training.py
